[package]
name = "neighbourhood"
version = "0.0.1"
edition = "2021"
authors = ["Oliver Heilmann"]
rust-version = "1.79.0"
publish = true
description = "Super fast fixed size K-d Trees for extremely large datasets."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/neighbourhood"
repository = "https://github.com/HOminus/neighbourhood"
homepage = "https://github.com/HOminus/neighbourhood"


[dependencies]
num-traits = "0.2"

[dev-dependencies]
criterion = "0.5"
rand = { version = "0.9", features = ["small_rng"] }

[[bench]]
name = "kd_tree"
harness = false

[[bench]]
name = "kd_index_tree"
harness = false
