[package]
name = "compare"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = { version = "0.9", features = ["small_rng"] }
neighbourhood = { path = ".." }
kiddo = "5.0"
kd-tree = "0.6"
kdtree = "0.7"
num-traits = "0.2"
ordered-float = "5"
